feat: implement "list" feature following the opsx workflow

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 dirs = "6.0"  # For expanding tilde paths
+
+[dev-dependencies]
+assert_cmd = "2.0"
+predicates = "3.0"
+tempfile = "3.0"
